--- a/package.json
+++ b/package.json
@@ -49,7 +49,11 @@
     "proxyquire": "^1.8.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-scripts": "^1.1.0",
+    "redux": "^3.7.2",
+    "redux-promise-middleware": "^5.0.0",
+    "redux-thunk": "^2.2.0",
     "rewire": "^3.0.2",
     "suitcss-components-grid": "^4.0.0",
     "suitcss-utils-after": "^1.0.1",
