--- a/package.json
+++ b/package.json
@@ -45,11 +45,15 @@
     ]
   },
   "dependencies": {
+    "history": "^4.7.2",
     "normalize.css": "^8.0.0",
     "proxyquire": "^1.8.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "^1.1.0",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^5.0.0",
