--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "^1.1.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "rewire": "^3.0.2",
@@ -99,6 +100,7 @@
     "postcss-nested": "^3.0.0",
     "prettier": "^1.10.2",
     "raf-polyfill": "^1.0.0",
+    "redux-devtools-extension": "^2.13.2",
     "style-loader": "^0.20.1",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
