--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node scripts/customized-config start",
-    "build": "node scripts/customized-config build",
+    "start": "SKIP_PREFLIGHT_CHECK=true node scripts/customized-config start",
+    "build": "SKIP_PREFLIGHT_CHECK=true node scripts/customized-config build",
     "test": "yarn lint && yarn jest",
     "lint": "yarn eslint && yarn stylelint",
-    "eslint": "NODE_ENV=test eslint src stories tests *.js",
+    "eslint": "NODE_ENV=test eslint src tests *.js",
     "stylelint": "NODE_ENV=test stylelint 'src/**/*.css'",
     "eject": "react-scripts eject"
   },
@@ -45,66 +45,71 @@
     ]
   },
   "dependencies": {
-    "history": "^4.7.2",
+    "@reach/router": "^1.1.1",
     "normalize.css": "^8.0.0",
-    "prop-types": "^15.6.0",
-    "proxyquire": "^1.8.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "^1.1.0",
-    "redux": "^3.7.2",
+    "prop-types": "^15.6.2",
+    "proxyquire": "^2.0.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-scripts": "2.0.0-next.3e165448",
+    "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^5.0.0",
-    "redux-thunk": "^2.2.0",
-    "rewire": "^3.0.2",
-    "suitcss-components-grid": "^4.0.0",
-    "suitcss-utils-after": "^1.0.1",
-    "suitcss-utils-before": "^1.0.1",
-    "suitcss-utils-size": "^2.0.1"
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0",
+    "rewire": "^3.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.5",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^20.0.0",
-    "babel-loader": "^7.1.2",
+    "autoprefixer": "^8.6.4",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.5",
+    "babel-jest": "^23.2.0",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.9",
+    "babel-runtime": "^6.26.0",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
-    "eslint": "^4.17.0",
+    "eslint": "^5.0.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-import-resolver-webpack": "^0.8.4",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-import-resolver-webpack": "^0.10.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.6.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "eslint-plugin-react": "^7.9.1",
+    "file-loader": "^1.1.11",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^20.0.0",
-    "postcss-css-variables": "^0.8.0",
+    "jest": "^23.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "postcss-css-variables": "^0.8.1",
     "postcss-custom-media": "^6.0.0",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.5",
     "postcss-nested": "^3.0.0",
-    "prettier": "^1.10.2",
+    "prettier": "^1.13.7",
     "raf-polyfill": "^1.0.0",
-    "redux-devtools-extension": "^2.13.2",
-    "style-loader": "^0.20.1",
-    "stylelint": "^8.4.0",
-    "stylelint-config-standard": "^18.0.0",
-    "svg-sprite-loader": "^3.6.2",
-    "webpack": "^3.10.0"
+    "redux-devtools-extension": "^2.13.5",
+    "style-loader": "^0.21.0",
+    "stylelint": "^9.3.0",
+    "stylelint-config-standard": "^18.2.0",
+    "svg-sprite-loader": "^3.8.0",
+    "webpack": "^4.14.0"
+  },
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">0.25%",
+      "not op_mini all",
+      "ie 11"
+    ]
   }
 }
