--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   "dependencies": {
     "@reach/router": "^1.1.1",
     "axios": "^0.18.0",
+    "humps": "^2.0.1",
+    "immutable": "^3.8.2",
     "prop-types": "^15.6.2",
     "proxyquire": "^2.0.1",
     "react": "^16.4.1",
@@ -54,6 +56,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.0-next.3e165448",
     "redux": "^4.0.0",
+    "redux-define": "^1.1.1",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
