--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
       "^_components/(.*)": "<rootDir>/src/components/$1",
       "^_config/(.*)": "<rootDir>/src/config/$1",
       "^_services/(.*)": "<rootDir>/src/services/$1",
+      "^_models/(.*)": "<rootDir>/src/models/$1",
+      "^_models": "<rootDir>/src/models",
       "^_views/(.*)": "<rootDir>/src/views/$1",
       "^_utils/(.*)": "<rootDir>/src/utils/$1",
       "^_styles/(.*)": "<rootDir>/src/styles/$1",
+      "^_store/(.*)": "<rootDir>/src/store/$1",
       "^_hocs/(.*)": "<rootDir>/src/hocs/$1",
       "^_middlewares/(.*)": "<rootDir>/src/middlewares/$1",
       "^_assets/(.*)": "<rootDir>/src/assets/$1",
