--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
-    "react-scripts": "2.0.0-next.3e165448",
+    "react-scripts": "^2.0.1",
     "redux": "^4.0.0",
     "redux-define": "^1.1.1",
     "redux-logger": "^3.0.6",
