--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@reach/router": "^1.1.1",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "humps": "^2.0.1",
     "immutable": "^3.8.2",
     "prop-types": "^15.6.2",
