--- a/.babelrc
+++ b/.babelrc
@@ -1,21 +1,18 @@
 {
-  "plugins": ["transform-react-inline-elements"],
+  "plugins": ["@babel/plugin-transform-react-inline-elements"],
   "presets": [
-    [
-      "es2015",
-      {
-        "modules": false
-      }
-    ],
-    "stage-0",
-    "react"
+    ["@babel/preset-env", { "modules": false, "useBuiltIns": "entry" }],
+    "@babel/preset-react"
   ],
   "env": {
+    "development": {
+      "presets": [["@babel/preset-react", { "development": true }]]
+    },
     "production": {
       "plugins": ["transform-react-remove-prop-types"]
     },
     "test": {
-      "presets": ["es2015", "stage-0", "react"]
+      "presets": ["@babel/preset-env", "@babel/preset-react"]
     }
   }
 }
