--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "plugins": ["@babel/plugin-transform-react-inline-elements"],
+  "plugins": ["@babel/plugin-transform-react-inline-elements", "@babel/plugin-transform-runtime"],
   "presets": [
     ["@babel/preset-env", { "modules": false, "useBuiltIns": "entry" }],
     "@babel/preset-react"
