--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@babel/plugin-transform-runtime": "^7.3.4",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.3.4",
     "autoprefixer": "^8.6.4",
     "babel-eslint": "^8.2.5",
