--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
-  "plugins": ["@babel/plugin-transform-react-inline-elements", "@babel/plugin-transform-runtime"],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-react-inline-elements",
+    "@babel/plugin-transform-runtime"
+  ],
   "presets": [
     ["@babel/preset-env", { "modules": false, "useBuiltIns": "entry" }],
     "@babel/preset-react"
