--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "SKIP_PREFLIGHT_CHECK=true node scripts/customized-config start",
     "build": "SKIP_PREFLIGHT_CHECK=true node scripts/customized-config build",
-    "test": "yarn lint && yarn jest",
+    "test": "yarn lint && NODE_ENV=test yarn jest",
     "lint": "yarn eslint && yarn stylelint",
     "eslint": "NODE_ENV=test eslint src tests *.js",
     "stylelint": "NODE_ENV=test stylelint 'src/**/*.css'",
