Change a filename to be more semantic

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,6 +55,7 @@
           "**/*.test.js",
           "server.js",
           "postcss.config.js",
+          "tests/setup.js",
           "webpack/webpack.config.*"
         ]
       }
