--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -69,13 +69,10 @@
     "prettier/prettier": [
       "error",
       {
-        "singleQuote": true,
-        "trailingComma": "es5",
-        "bracketSpacing": true,
-        "jsxBracketSameLine": false,
+        "printWidth": 180,
         "semi": false,
-        "parser": "babylon",
-        "printWidth": 100
+        "singleQuote": true,
+        "trailingComma": "es5"
       }
     ],
 
