--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -76,6 +76,7 @@
       }
     ],
 
+    "react/destructuring-assignment": "off",
     "react/jsx-filename-extension": "off",
     "react/jsx-no-bind": [
       1,
