--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "postcss-nested": "^4.0.0",
     "prettier": "^1.13.7",
     "raf-polyfill": "^1.0.0",
+    "react-test-renderer": "^16.8.0",
     "redux-devtools-extension": "^2.13.5",
     "style-loader": "^0.23.0",
     "stylelint": "^9.3.0",
