--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,6 +1,6 @@
 {
   "hooks": {
-    "pre-commit": "yarn run lint",
-    "pre-push": "yarn run test"
+    "pre-commit": "yarn lint",
+    "pre-push": "yarn test"
   }
 }
