--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.9.1",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "file-loader": "^3.0.0",
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
