--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "@babel/runtime": "^7.4.4",
+    "@babel/runtime-corejs3": "^7.4.4",
     "@reach/router": "^1.1.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "core-js": "^3.0.1",
     "humps": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.6.2",
@@ -30,6 +30,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.2",
     "rewire": "^4.0.0"
   },
   "devDependencies": {
