Adding first snippets to boilerplate

--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,7 @@ typings/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/jungledevs.code-snippets
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
