feat: Add an alias for the folder hooks and use previous hook

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -15,6 +15,7 @@
       "_assets/*": ["src/assets/*"],
       "_hocs/*": ["src/hocs/*"],
       "_middlewares/*": ["src/middlewares/*"],
+      "_hooks/*": ["src/hooks/*"],
       "_privateDependencies/*": ["private-dependencies/*"]
     }
   },
