--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,30 +9,46 @@ defaults: &defaults
 
 version: 2
 jobs:
-  build:
+  install_dependencies:
     <<: *defaults
     steps:
       - checkout
-      # Download and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "yarn.lock" }}
-            # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
       - run: yarn install
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "yarn.lock" }}
-      - run: yarn lint
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - ./
+  stylelint:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ./
+      - run: yarn stylelint
+  eslint:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ./
+      - run: yarn eslint
+  test:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ./
       - run: yarn test
-
-  deploy-staging:
+  deploy_staging:
     <<: *defaults
     steps:
       - checkout
       - setup_remote_docker
-      # Download and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "yarn.lock" }}
@@ -43,12 +59,11 @@ jobs:
       - run: yarn build
       - run: aws s3 sync build/ s3://$REACT_S3_BUCKET_STAGING --delete
       - run: aws cloudfront create-invalidation --paths '/*' --distribution-id $AWS_DISTRIBUTION_ID_STAGING
-  deploy-production:
+  deploy_production:
     <<: *defaults
     steps:
       - checkout
       - setup_remote_docker
-      # Download and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "yarn.lock" }}
@@ -64,18 +79,36 @@ workflows:
   version: 2
   build_test_deploy:
     jobs:
-      - build:
+      - install_dependencies:
           filters:
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
-      - deploy-staging:
+      - stylelint:
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
+          requires:
+            - install_dependencies
+      - eslint:
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
+          requires:
+            - install_dependencies
+      - test:
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
+          requires:
+            - install_dependencies
+      - deploy_staging:
           filters:
             branches:
               only:
                 - staging
           requires:
             - build
-      - deploy-production:
+      - deploy_production:
           filters:
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
