--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
 
 workflows:
   version: 2
-  build_test_deploy:
+  main_workflow:
     jobs:
       - install_dependencies:
           filters:
