--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "GENERATE_SOURCEMAP=false SKIP_PREFLIGHT_CHECK=true node scripts/customized-config build",
+    "build": "cross-env GENERATE_SOURCEMAP=false SKIP_PREFLIGHT_CHECK=true node scripts/customized-config build",
     "eject": "react-scripts eject",
-    "eslint": "NODE_ENV=test eslint src tests *.js",
-    "eslint-fix": "NODE_ENV=test eslint --fix src tests *.js",
+    "eslint": "cross-env NODE_ENV=test eslint src tests *.js",
+    "eslint-fix": "cross-env NODE_ENV=test eslint --fix src tests *.js",
     "lint": "yarn eslint && yarn stylelint",
-    "start": "SKIP_PREFLIGHT_CHECK=true node scripts/customized-config start",
-    "stylelint": "NODE_ENV=test stylelint 'src/**/*.css'",
-    "test": "NODE_ENV=test jest --passWithNoTests"
+    "start": "cross-env SKIP_PREFLIGHT_CHECK=true node scripts/customized-config start",
+    "stylelint": "cross-env NODE_ENV=test stylelint 'src/**/*.css'",
+    "test": "cross-env NODE_ENV=test jest --passWithNoTests"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.4.4",
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "core-js": "^3.0.1",
+    "cross-env": "^5.2.0",
     "humps": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.6.2",
