--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "core-js": "^3.0.1",
-    "cross-env": "^5.2.0",
+    "cross-env": "^6.0.0",
     "humps": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.6.2",
@@ -76,7 +76,8 @@
     "stylelint": "^10.0.1",
     "stylelint-config-standard": "^18.3.0",
     "svg-sprite-loader": "^4.1.6",
-    "webpack": "^4.31.0"
+    "webpack": "^4.31.0",
+    "cross-env": "^6.0.0"
   },
   "browserslist": {
     "development": [
