--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,9 +1,9 @@
 {
   "*.{jsx,js}": [
-    "eslint --ext js --ext jsx"
+    "eslint --ext js --ext jsx --fix"
   ],
   "src/**/*.css":[
-    "stylelint"
+    "stylelint --fix"
   ]
 }
 
