--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@babel/runtime-corejs3": "^7.11.2",
     "@reach/router": "^1.3.4",
     "@svgr/webpack": "4.3.3",
-    "axios": "^0.19.2",
+    "axios": "0.21.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
@@ -42,7 +42,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.0.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
@@ -90,9 +90,6 @@
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
