--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
     "css-loader": "^4.2.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^6.6.0",
+    "eslint": "^7.18.0",
     "eslint-config-react-app": "^5.2.1",
-    "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.6.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
@@ -126,6 +125,7 @@
     "eslint-import-resolver-babel-module": "^5.1.2",
     "eslint-import-resolver-webpack": "^0.12.2",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-webpack-plugin": "^2.4.3",
     "husky": "^4.2.5",
     "prettier": "^2.0.5",
     "raf-polyfill": "^1.0.0",
