--- a/package.json
+++ b/package.json
@@ -14,40 +14,77 @@
     "prestart": "node bin/check-nvmrc.js"
   },
   "dependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/runtime-corejs3": "^7.11.2",
     "@reach/router": "^1.3.4",
-    "@svgr/webpack": "4.3.3",
     "axios": "0.21.1",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.3.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.6",
-    "babel-preset-react-app": "^9.1.2",
     "bfj": "^7.0.2",
     "camelcase": "^5.3.1",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "chalk": "^4.1.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
-    "css-loader": "^4.2.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^7.18.0",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-plugin-flowtype": "4.6.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "file-loader": "^6.0.0",
-    "fs-extra": "^8.1.0",
-    "html-webpack-plugin": "4.0.0-beta.11",
+    "fs-extra": "^9.1.0",
     "humps": "^2.0.1",
     "identity-obj-proxy": "^3.0.0",
     "immutable": "^4.0.0-rc.12",
+    "path": "^0.12.7",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
+    "react-dev-utils": "^10.2.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-define": "^1.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.2",
+    "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.7",
+    "resolve": "1.15.0",
+    "semver": "6.3.0",
+    "ts-pnp": "1.1.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/plugin-transform-react-inline-elements": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/runtime-corejs3": "^7.11.2",
+    "@svgr/webpack": "4.3.3",
+    "autoprefixer": "^9.8.6",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-named-asset-import": "^0.3.6",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-preset-react-app": "^9.1.2",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "css-loader": "^4.2.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-import-resolver-babel-module": "^5.1.2",
+    "eslint-import-resolver-webpack": "^0.12.2",
+    "eslint-plugin-flowtype": "4.6.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.4.3",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "4.5.1",
+    "husky": "^4.2.5",
     "jest": "^26.3.0",
     "jest-cli": "^26.4.2",
     "jest-environment-jsdom-fourteen": "1.0.1",
@@ -64,28 +101,21 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-app-polyfill": "^1.0.6",
-    "react-dev-utils": "^10.2.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "redux": "^4.0.5",
-    "redux-define": "^1.1.1",
-    "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^6.1.2",
-    "redux-thunk": "^2.3.0",
-    "regenerator-runtime": "^0.13.7",
-    "resolve": "1.15.0",
+    "prettier": "^2.0.5",
+    "raf-polyfill": "^1.0.0",
+    "react-hooks-testing-library": "^0.6.0",
+    "react-test-renderer": "^16.13.1",
+    "redux-devtools-extension": "^2.13.8",
     "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.2",
-    "semver": "6.3.0",
+    "sass-loader": "10.1.1",
     "style-loader": "^1.2.1",
+    "stylelint": "^13.6.1",
+    "stylelint-config-standard": "^20.0.0",
     "svg-sprite-loader": "^5.0.0",
     "terser-webpack-plugin": "2.3.5",
-    "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
     "webpack": "^4.44.1",
+    "webpack-cli": "^4.4.0",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
@@ -101,38 +131,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/plugin-transform-react-inline-elements": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "autoprefixer": "^9.8.6",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.3",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-import-resolver-babel-module": "^5.1.2",
-    "eslint-import-resolver-webpack": "^0.12.2",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-webpack-plugin": "^2.4.3",
-    "husky": "^4.2.5",
-    "prettier": "^2.0.5",
-    "raf-polyfill": "^1.0.0",
-    "react-hooks-testing-library": "^0.6.0",
-    "react-test-renderer": "^16.13.1",
-    "redux-devtools-extension": "^2.13.8",
-    "stylelint": "^13.6.1",
-    "stylelint-config-standard": "^20.0.0"
   }
 }
