--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "humps": "^2.0.1",
     "identity-obj-proxy": "^3.0.0",
     "immutable": "^4.0.0-rc.12",
+    "lint-staged": "^10.5.3",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
