--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prestart": "node bin/check-nvmrc.js"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/styles": "^4.11.3",
     "@reach/router": "^1.3.4",
     "axios": "0.21.1",
     "bfj": "^7.0.2",
