feat: Add internalization with i18n

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dotenv-expand": "5.1.0",
     "fs-extra": "^9.1.0",
     "humps": "^2.0.1",
+    "i18next": "^19.8.4",
+    "i18next-browser-languagedetector": "^6.0.1",
     "identity-obj-proxy": "^3.0.0",
     "immutable": "^4.0.0-rc.12",
     "lint-staged": "^10.5.3",
@@ -37,6 +39,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.8.5",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-define": "^1.1.1",
