--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,8 +38,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "yarn.lock" }}
       - run: sudo apt-get update && sudo apt-get install -y python-dev
-      - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
-      - run: sudo python get-pip.py
+      - run: sudo apt update && sudo apt install python-pip
       - run: sudo pip install awscli --upgrade
       - run: yarn build
       - run: aws s3 sync build/ s3://$REACT_S3_BUCKET_STAGING --delete --cache-control "public, max-age=604800"
@@ -53,8 +52,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "yarn.lock" }}
       - run: sudo apt-get update && sudo apt-get install -y python-dev
-      - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
-      - run: sudo python get-pip.py
+      - run: sudo apt update && sudo apt install python-pip
       - run: sudo pip install awscli --upgrade
       - run: yarn build
       - run: aws s3 sync build/ s3://$REACT_S3_BUCKET_PRODUCTION --delete --cache-control "public, max-age=604800"
