--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-cookies": "^0.1.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.8.5",
@@ -99,6 +100,8 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "json-server": "^0.16.3",
+    "json-server-auth": "^2.0.2",
     "mini-css-extract-plugin": "^0.10.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
